# protei_course_work

./: CMakeLists.txt  README.md
src/: additional.cpp  additional.h  ethDevice.cpp  ethDevice.h  hostInfo.cpp  hostInfo.h  main.cpp
test/: CMakeLists.txt  test.cpp
